force-app/main/default/objects/SCMT__Desk_Config__mdt/SCMT__Desk_Config__mdt.object-meta.xml
<CustomObject>
    <label>Desk Config</label>
    <pluralLabel>Desk Configs</pluralLabel>
</CustomObject>