force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__Active__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>