force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>SCMT__ConsumerKey__c</fullName>
    <description>Desk.com Consumer Key</description>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>