force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>SCMT__ConsumerSecret__c</fullName>
    <description>Desk.com Consumer Secret</description>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>