force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Endpoint__c</fullName>
    <description>Desk.com Endpoint</description>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>