force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__Host__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Host__c</fullName>
    <label>Host</label>
    <required>true</required>
    <type>Url</type>
</CustomField>