force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__Token__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Token__c</fullName>
    <description>Desk.com Token</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>