force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__TokenSecret__c.field-meta.xml
<CustomField>
    <fullName>SCMT__TokenSecret__c</fullName>
    <description>Desk.com Token Secret</description>
    <label>Token Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>