force-app/main/default/objects/SCMT__Desk_Config__mdt/fields/SCMT__URL__c.field-meta.xml
<CustomField>
    <fullName>SCMT__URL__c</fullName>
    <label>URL</label>
    <length>99</length>
    <type>Text</type>
</CustomField>